Refactor: Implement voting dialog and update token storage
This commit introduces a voting dialog and refactors how authentication tokens are stored and retrieved.

Key changes include:

- **Voting Dialog:**
    - Added `VotingDialog.kt` composable, which displays different sets of voting options (Default, Fibonacci, T-shirts, Powers of 2) based on the `VotingType` enum.
    - Integrated the `VotingDialog` into `RoomScreen.kt`, shown when a new FloatingActionButton is clicked.
    - Updated `RoomViewModel` to manage the visibility of the voting dialog (`votingDialogVisible`) and store the `selectedVoteValue`.
    - Added `showVotingDialog()`, `hideVotingDialog()`, and `setVoteValue()` methods to `RoomViewModel`.
- **Token Storage with Jetpack DataStore:**
    - Modified `Preferences.kt` to use Jetpack DataStore instead of `EncryptedSharedPreferences` for storing the authentication token.
    - Implemented encryption and decryption of the token using `AES/GCM/NoPadding` and a `SecretKey` derived from `MasterKey`.
    - Renamed token handling methods:
        - `saveTokenToStorage` to `saveToken` (now a suspend function).
        - `getTokenFromStorage` to `getToken` (returns a Flow) and added `getTokenOnce` (suspend function).
        - `clearTokenFromStorage` to `clearToken` (now a suspend function).
    - Updated `PokerRepositoryImpl` and `AccountScreen.kt` to use the new asynchronous token methods.
- **UI and Navigation:**
    - In `MainScreen.kt`, changed the `startDestination` to "splash".
    - Added a "splash" route that checks for an existing token using `Preferences.getTokenOnce` and navigates to "room" or "auth" accordingly.
    - In `StoriesSidebar.kt`, renamed `vote` state variable to `votes`.
- **Dependencies:**
    - Added `androidx.security:security-crypto:1.1.0` dependency in `app/build.gradle.kts` and `libs.versions.toml`.
- **Minor Changes:**
    - Corrected the provision of `WebSocketUseCase` in `UseCaseModule.kt` (moved to the top).
    - Updated 

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ navigationCompose = "2.9.0"
 okhttp = "4.12.0"
 retrofit = "3.0.0"
 securityCrypto = "1.1.0-beta01"
+securityCryptoVersion = "1.1.0"
 tinkAndroid = "1.18.0"
 
 [libraries]
@@ -33,6 +34,7 @@ androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-view
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
+androidx-security-crypto-v110 = { module = "androidx.security:security-crypto", version.ref = "securityCryptoVersion" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
