--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,26 +3,26 @@ agp = "8.12.0"
 converterGson = "3.0.0"
 datastorePreferences = "1.1.7"
 desugar_jdk_libs = "2.1.5"
-hiltAndroid = "2.56.2"
+hiltAndroid = "2.57"
 hiltNavigationCompose = "1.2.0"
-kotlin = "2.2.0"
-kotlinSerialization = "2.2.0"
+kotlin = "2.2.10"
+kotlinSerialization = "2.2.10"
 kotlinSerializationJson = "1.9.0"
-ktlint = "12.3.0"
-coreKtx = "1.16.0"
+ktlint = "13.0.0"
+coreKtx = "1.17.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.9.1"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
+lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
-composeBom = "2025.06.01"
-lifecycleViewmodelKtx = "2.9.1"
-loggingInterceptor = "4.12.0"
+composeBom = "2025.08.00"
+lifecycleViewmodelKtx = "2.9.2"
+loggingInterceptor = "5.1.0"
 materialIconsExtended = "1.7.8"
-navigationCompose = "2.9.0"
-okhttp = "4.12.0"
+navigationCompose = "2.9.3"
+okhttp = "5.1.0"
 retrofit = "3.0.0"
-securityCrypto = "1.1.0-beta01"
+securityCrypto = "1.1.0"
 securityCryptoVersion = "1.1.0"
 tinkAndroid = "1.18.0"
 
